--- a/stationery-store/public/manifest.json
+++ b/stationery-store/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Salunke & Co.",
+  "name": "Salunke & Co. | Premium Stationery",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#8b7355",
+  "background_color": "#faf9f7"
 }
